test/input/invalid/assign_3.js
console.log(3 || ++this);
